--- a/packages/big-design-theme/package.json
+++ b/packages/big-design-theme/package.json
@@ -18,7 +18,7 @@
     "prepublishOnly": "rimraf dist && yarn run typeCheck && yarn run test && yarn run build",
     "prepack": "big-design-prepack",
     "postpack": "big-design-postpack",
-    "test": "BABEL_ENV=test jest",
+    "test": "jest",
     "test:watch": "yarn run test --watch",
     "typeCheck": "tsc --noEmit"
   },
@@ -49,11 +49,14 @@
     "@babel/preset-typescript": "^7.15.0",
     "@bigcommerce/configs": "^0.19.1",
     "@bigcommerce/pack": "^0.2.0",
+    "@swc/core": "^1.4.2",
+    "@swc/jest": "^0.2.36",
+    "@swc/plugin-styled-components": "^1.5.118",
     "@types/jest": "^29.4.0",
     "@types/styled-components": "^5.1.26",
     "babel-jest": "^29.0.2",
     "babel-plugin-styled-components": "^2.0.7",
-    "jest": "^29.0.3",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.4.1",
     "jest-fail-on-console": "^3.1.1",
     "jest-styled-components": "^7.1.1",
