--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -18,7 +18,7 @@
     "build:cjs": "NODE_ENV=production BABEL_ENV=cjs babel --extensions \".ts,.tsx\" ./src --out-dir ./dist/cjs",
     "build:es": "NODE_ENV=production BABEL_ENV=es babel --extensions \".ts,.tsx\" ./src --out-dir ./dist/es",
     "build:dt": "tsc -p tsconfig.declarations.json --emitDeclarationOnly",
-    "test": "BABEL_ENV=test jest",
+    "test": "jest",
     "test:watch": "yarn run test --watch",
     "prepublishOnly": "rimraf dist && yarn run typeCheck && yarn run test --maxWorkers=2 && yarn run build",
     "prepack": "big-design-prepack",
@@ -60,6 +60,9 @@
     "@babel/preset-typescript": "^7.15.0",
     "@bigcommerce/configs": "^0.19.1",
     "@bigcommerce/pack": "^0.2.0",
+    "@swc/core": "^1.4.2",
+    "@swc/jest": "^0.2.36",
+    "@swc/plugin-styled-components": "^1.5.118",
     "@testing-library/dom": "^9.2.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.0.0",
@@ -74,7 +77,7 @@
     "@types/styled-components": "^5.1.26",
     "babel-jest": "^29.0.2",
     "babel-plugin-styled-components": "^2.0.7",
-    "jest": "^29.0.3",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.4.1",
     "jest-fail-on-console": "^3.1.1",
     "jest-styled-components": "^7.1.1",
