chore: lock @commitlint/* to v18
@commitlint/* modules greater than 18 are ESM only. Without serious
changes to the repo, We are limiting it to the latest version without
ESM.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,10 @@ updates:
       day: 'tuesday'
     ignore:
       # Next major version is exported as an ESM module
+      - dependency-name: '@commitlint/cli'
+        update-types: ['version-update:semver-major']
+      - dependency-name: '@commitlint/config-conventional'
+        update-types: ['version-update:semver-major']
       - dependency-name: 'inquirer'
         update-types: ['version-update:semver-major']
       - dependency-name: 'inquirer-autocomplete-prompt'
