--- a/package.json
+++ b/package.json
@@ -33,5 +33,6 @@
     "lerna": "^8.1.2",
     "lint-staged": "^15.2.2",
     "typescript": "^5.3.3"
-  }
+  },
+  "packageManager": "yarn@1.22.19"
 }
