--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ commands:
       - run:
           name: Install pnpm package manager
           command: |
-            corepack enable
+            corepack enable --install-directory ~/bin
             corepack prepare pnpm@latest-8 --activate
             pnpm config set store-dir .pnpm-store
       - run:
