--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -25,6 +25,7 @@
     "@bigcommerce/big-design": "workspace:^",
     "@bigcommerce/big-design-icons": "workspace:^",
     "@bigcommerce/big-design-theme": "workspace:^",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "clipboard-copy": "^4.0.1",
     "next-transpile-modules": "^10.0.0",
     "prettier": "^2.4.0",
