--- a/packages/big-design-icons/package.json
+++ b/packages/big-design-icons/package.json
@@ -49,6 +49,7 @@
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.15.0",
     "@bigcommerce/configs": "^0.20.1",
+    "@styled/typescript-styled-plugin": "^1.0.1",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
     "@svgr/plugin-prettier": "^8.1.0",
@@ -70,7 +71,6 @@
     "rimraf": "^5.0.0",
     "styled-components": "^5.3.5",
     "tiny-async-pool": "^2.0.1",
-    "typescript": "^5.4.4",
-    "typescript-styled-plugin": "^0.18.2"
+    "typescript": "^5.4.4"
   }
 }
