--- a/packages/big-design-theme/package.json
+++ b/packages/big-design-theme/package.json
@@ -49,6 +49,7 @@
     "@babel/preset-typescript": "^7.15.0",
     "@bigcommerce/configs": "^0.20.1",
     "@bigcommerce/pack": "^0.2.0",
+    "@styled/typescript-styled-plugin": "^1.0.1",
     "@swc/core": "^1.4.2",
     "@swc/jest": "^0.2.36",
     "@swc/plugin-styled-components": "^1.5.118",
@@ -64,7 +65,6 @@
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.0",
     "styled-components": "^5.3.5",
-    "typescript": "^5.4.4",
-    "typescript-styled-plugin": "^0.18.2"
+    "typescript": "^5.4.4"
   }
 }
