--- a/packages/configs/ts/tsconfig.json
+++ b/packages/configs/ts/tsconfig.json
@@ -20,7 +20,7 @@
   },
   "plugins": [
     {
-      "name": "typescript-styled-plugin"
+      "name": "@styled/typescript-styled-plugin"
     }
   ]
 }
