--- a/packages/big-design-icons/package.json
+++ b/packages/big-design-icons/package.json
@@ -33,7 +33,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@babel/runtime": "^7.15.4",
+    "@babel/runtime": "^7.24.4",
     "@bigcommerce/big-design-theme": "workspace:^"
   },
   "peerDependencies": {
@@ -42,13 +42,13 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.15.4",
-    "@babel/core": "^7.15.5",
-    "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.15.6",
+    "@babel/cli": "^7.24.1",
+    "@babel/core": "^7.24.4",
+    "@babel/plugin-transform-runtime": "^7.24.3",
+    "@babel/preset-env": "^7.24.4",
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.15.0",
-    "@bigcommerce/configs": "^0.20.1",
+    "@bigcommerce/configs": "workspace:^",
     "@styled/typescript-styled-plugin": "^1.0.1",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
@@ -56,21 +56,21 @@
     "@svgr/plugin-svgo": "^8.1.0",
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.23",
-    "@types/styled-components": "^5.1.26",
+    "@types/styled-components": "^5.1.34",
     "babel-plugin-styled-components": "^2.0.7",
     "camelcase": "^6.3.0",
-    "flag-icons": "^7.1.0",
+    "flag-icons": "^7.2.1",
     "fs-extra": "^11.1.0",
     "glob": "^10.3.12",
-    "inquirer": "^8.2.4",
-    "inquirer-autocomplete-prompt": "^2.0.0",
+    "inquirer": "^8.2.6",
+    "inquirer-autocomplete-prompt": "^2.0.1",
     "prettier": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "rimraf": "^5.0.0",
-    "styled-components": "^5.3.5",
+    "styled-components": "^5.3.11",
     "tiny-async-pool": "^2.0.1",
-    "typescript": "^5.4.4"
+    "typescript": "^5.4.5"
   }
 }
