--- a/packages/big-design-theme/package.json
+++ b/packages/big-design-theme/package.json
@@ -32,8 +32,8 @@
     "typings": "dist/index.d.ts"
   },
   "dependencies": {
-    "@babel/runtime": "^7.15.4",
-    "polished": "^4.0.0"
+    "@babel/runtime": "^7.24.4",
+    "polished": "^4.3.1"
   },
   "peerDependencies": {
     "react": "^18.0.0",
@@ -41,30 +41,30 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.15.4",
-    "@babel/core": "^7.15.5",
-    "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.15.6",
+    "@babel/cli": "^7.24.1",
+    "@babel/core": "^7.24.4",
+    "@babel/plugin-transform-runtime": "^7.24.3",
+    "@babel/preset-env": "^7.24.4",
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.15.0",
-    "@bigcommerce/configs": "^0.20.1",
+    "@bigcommerce/configs": "workspace:^",
     "@bigcommerce/pack": "^0.2.0",
     "@styled/typescript-styled-plugin": "^1.0.1",
-    "@swc/core": "^1.4.2",
+    "@swc/core": "^1.4.14",
     "@swc/jest": "^0.2.36",
     "@swc/plugin-styled-components": "^1.5.118",
     "@types/jest": "^29.4.0",
-    "@types/styled-components": "^5.1.26",
+    "@types/styled-components": "^5.1.34",
     "babel-jest": "^29.0.2",
     "babel-plugin-styled-components": "^2.0.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.4.1",
-    "jest-fail-on-console": "^3.1.1",
+    "jest-fail-on-console": "^3.2.0",
     "jest-styled-components": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.0",
-    "styled-components": "^5.3.5",
-    "typescript": "^5.4.4"
+    "styled-components": "^5.3.11",
+    "typescript": "^5.4.5"
   }
 }
