--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -32,19 +32,19 @@
     "typings": "dist/index.d.ts"
   },
   "dependencies": {
-    "@babel/runtime": "^7.15.4",
+    "@babel/runtime": "^7.24.4",
     "@bigcommerce/big-design-icons": "workspace:^",
     "@bigcommerce/big-design-theme": "workspace:^",
     "@popperjs/core": "^2.11.6",
     "@types/react-datepicker": "^6.2.0",
     "date-fns": "3.6.0",
     "downshift": "9.0.4",
-    "focus-trap": "^7.0.0",
-    "polished": "^4.0.0",
+    "focus-trap": "^7.5.4",
+    "polished": "^4.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^6.6.0",
     "react-popper": "^2.3.0",
-    "zustand": "^4.3.2"
+    "zustand": "^4.5.2"
   },
   "peerDependencies": {
     "react": "^18.0.0",
@@ -52,41 +52,41 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.15.4",
-    "@babel/core": "^7.15.5",
-    "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.15.6",
+    "@babel/cli": "^7.24.1",
+    "@babel/core": "^7.24.4",
+    "@babel/plugin-transform-runtime": "^7.24.3",
+    "@babel/preset-env": "^7.24.4",
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.15.0",
-    "@bigcommerce/configs": "^0.20.1",
-    "@bigcommerce/pack": "^0.2.0",
+    "@bigcommerce/configs": "workspace:^",
+    "@bigcommerce/pack": "workspace:^",
     "@styled/typescript-styled-plugin": "^1.0.1",
-    "@swc/core": "^1.4.2",
+    "@swc/core": "^1.4.14",
     "@swc/jest": "^0.2.36",
     "@swc/plugin-styled-components": "^1.5.118",
-    "@testing-library/dom": "^9.2.0",
+    "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/react": "^14.3.1",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.3.0",
     "@types/jest": "^29.4.0",
-    "@types/node": "^20.12.2",
+    "@types/node": "^20.12.7",
     "@types/react": "^18.2.73",
-    "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.23",
-    "@types/react-test-renderer": "^18.0.0",
-    "@types/styled-components": "^5.1.26",
+    "@types/react-test-renderer": "^18.0.7",
+    "@types/styled-components": "^5.1.34",
     "babel-jest": "^29.0.2",
     "babel-plugin-styled-components": "^2.0.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.4.1",
-    "jest-fail-on-console": "^3.1.1",
+    "jest-fail-on-console": "^3.2.0",
     "jest-styled-components": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0",
     "rimraf": "^5.0.0",
-    "styled-components": "^5.3.5",
-    "typescript": "^5.4.4"
+    "styled-components": "^5.3.11",
+    "typescript": "^5.4.5"
   }
 }
