--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -18,10 +18,10 @@
   },
   "prettier": "@bigcommerce/eslint-config/prettier",
   "dependencies": {
-    "@babel/core": "^7.15.5",
+    "@babel/core": "^7.24.4",
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.15.0",
-    "@babel/standalone": "^7.20.15",
+    "@babel/standalone": "^7.24.4",
     "@bigcommerce/big-design": "workspace:^",
     "@bigcommerce/big-design-icons": "workspace:^",
     "@bigcommerce/big-design-theme": "workspace:^",
@@ -34,23 +34,23 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-live": "^4.1.6",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
-    "@bigcommerce/configs": "^0.20.1",
+    "@bigcommerce/configs": "workspace:^",
     "@bigcommerce/examples": "^0.26.1",
     "@styled/typescript-styled-plugin": "^1.0.1",
     "@types/gtag.js": "^0.0.19",
-    "@types/node": "^20.12.2",
+    "@types/node": "^20.12.7",
     "@types/prettier": "^2.0.1",
     "@types/react": "^18.2.73",
-    "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.23",
-    "@types/styled-components": "^5.1.26",
+    "@types/styled-components": "^5.1.34",
     "babel-plugin-styled-components": "^2.0.7",
     "jsx-to-string-loader": "^1.2.0",
-    "next": "^14.0.4",
+    "next": "^14.2.1",
     "push-dir": "^0.4.1",
-    "typescript": "^5.4.4"
+    "typescript": "^5.4.5"
   }
 }
