--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "prettier": "@bigcommerce/eslint-config/prettier",
   "devDependencies": {
     "@bigcommerce/eslint-config": "^2.9.0",
+    "@changesets/changelog-git": "^0.2.0",
+    "@changesets/cli": "^2.27.7",
     "@commitlint/cli": "^18.6.1",
     "@commitlint/config-conventional": "^18.6.3",
     "@types/babel__standalone": "^7.1.4",
