--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "lint": "eslint . --ext .ts,.tsx,.js,.mdx --max-warnings 0",
     "start": "turbo start --filter @bigcommerce/docs",
     "test": "turbo test",
-    "typecheck": "turbo typecheck",
-    "prepare": "husky"
+    "typecheck": "turbo typecheck"
   },
   "prettier": "@bigcommerce/eslint-config/prettier",
   "devDependencies": {
@@ -23,7 +22,6 @@
     "@types/babel__standalone": "^7.1.4",
     "eslint": "^8.33.0",
     "eslint-plugin-mdx": "^3.1.5",
-    "husky": "^9.0.11",
     "lerna": "^8.1.2",
     "turbo": "^2.0.14",
     "typescript": "^5.4.5"
